extensive work and rename refactoring for localhost http support